Fix MORE Q&A block borders appearing on mobile

--- a/sass/blocks/_block-article-more-QA.scss
+++ b/sass/blocks/_block-article-more-QA.scss
@@ -4,26 +4,6 @@
   margin-bottom: 8vw;
 }
 
-.block-article-more-QA::before {
-  display: block;
-  content: "";
-  position: absolute;
-  top: -5vw;
-  width: 100%;
-  height: 2px;
-  background: $lightGray;
-}
-
-.block-article-more-QA::after {
-  display: block;
-  content: "";
-  position: relative;
-  bottom: -40px;
-  width: 100%;
-  height: 2px;
-  background: $lightGray;
-}
-
 .block-article-more-QA .section__title {
   margin-bottom: 40px;
 }
@@ -100,6 +80,24 @@
 }
 
 @media only screen and (min-width: $break-tab) {
+
+  .block-article-more-QA::before, .block-article-more-QA::after {
+    display: block;
+    content: "";
+    width: 100%;
+    height: 2px;
+    background: $lightGray;
+  }
+
+  .block-article-more-QA::before {
+    position: absolute;
+    top: -5vw;
+  }
+
+  .block-article-more-QA::after {
+    position: relative;
+    bottom: -40px;
+  }
 
   .block-article-more-QA .container {
     float: left;
