--- a/sass/master.css
+++ b/sass/master.css
@@ -851,24 +851,6 @@ p.article-paragraph__heading {
   position: relative;
   margin-bottom: 8vw; }
 
-.block-article-more-QA::before {
-  display: block;
-  content: "";
-  position: absolute;
-  top: -5vw;
-  width: 100%;
-  height: 2px;
-  background: #f6f6f6; }
-
-.block-article-more-QA::after {
-  display: block;
-  content: "";
-  position: relative;
-  bottom: -40px;
-  width: 100%;
-  height: 2px;
-  background: #f6f6f6; }
-
 .block-article-more-QA .section__title {
   margin-bottom: 40px; }
 
@@ -922,6 +904,18 @@ p.article-paragraph__heading {
     margin: 0 0 40px 0; } }
 
 @media only screen and (min-width: 767px) {
+  .block-article-more-QA::before, .block-article-more-QA::after {
+    display: block;
+    content: "";
+    width: 100%;
+    height: 2px;
+    background: #f6f6f6; }
+  .block-article-more-QA::before {
+    position: absolute;
+    top: -5vw; }
+  .block-article-more-QA::after {
+    position: relative;
+    bottom: -40px; }
   .block-article-more-QA .container {
     float: left; }
   .block-article-more-QA .container:first-child {
